<resources>
    <string name="app_name">LIMS Transfer</string>
    <string name="text_item_count_label">Items:</string>
    <string name="text_current_location_label">Location:</string>
    <string name="expanded_menu_description">Options</string>
    <string name="action_remove">Remove</string>
    <string name="action_continuous_mode">Continuous mode</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign">Sign</string>
    <string name="title_sign_here">Sign here</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_transfer_id">ID:</string>
    <string name="action_finalize">Finalize</string>
    <string name="action_delete">Delete</string>
</resources>
