<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:background="@drawable/dialog_background"
    android:layout_gravity="fill_horizontal"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <View
        android:id="@+id/sign_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#7F000000"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_here_text_view"/>

    <TextView
        android:id="@+id/sign_here_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_here"
        android:paddingBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/signature_pad"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:fontFamily="monospace"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/sign_line"
        app:layout_constraintBottom_toTopOf="@+id/sign_here_text_view"
        tools:ignore="HardcodedText,SpUsage"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="fill_horizontal"
        app:penMinWidth="4dp"
        app:penMaxWidth="4dp"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/action_clear"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_save"
        app:layout_constraintBottom_toBottomOf="@+id/button_save"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintTop_toTopOf="@+id/button_save"
        app:layout_constraintBottom_toBottomOf="@+id/button_save"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_save"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/action_save"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
